--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -10,6 +10,9 @@ jobs:
     runs-on: self-hosted
 
     steps:
+      - name: Navigate to application directory
+        run: cd /home/ubuntu/SNS_Project
+        
       - name: Checkout code
         run: |
           git pull origin main 
