--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
   nginx:
     image: nginx:latest
     volumes:
-      - /etc/nginx/conf.d/sns.jwoo.site.conf:/etc/nginx/conf.d/default.conf:ro
+      - /etc/nginx/conf.d/sns.jwoo.site.conf:/etc/nginx/conf.d/default.conf
       - /etc/letsencrypt:/etc/letsencrypt
     ports:
       - "80:80"
