--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "postbuild": "next-sitemap",
     "prestart": "npm run build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "deploy": "pm2 start ecosystem.config.js --env production"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
