--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,4 +54,7 @@ jobs:
             --deployment-group-name ${{ env.CODE_DEPLOY_GROUP_NAME }} \
             --s3-location bucket=${{ env.S3_BUCKET_NAME }},bundleType=zip,key=nextjs-app-${{ github.sha }}.zip \
             --region ${{ env.AWS_REGION }}
-
+          env:
+            AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+            AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+            AWS_REGION: ${{ env.AWS_REGION }}
