fix: next build regular mode

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,10 +37,8 @@ jobs:
 
       - name: Make zip file
         run: |
-          zip -qq -r nextjs-app-${{ github.sha }}.zip .next node_modules package.json appspec.yml scripts/
-
-      - name: Verify zip file contents
-        run: unzip -l nextjs-app-${{ github.sha }}.zip
+          zip -qq -r nextjs-app-${{ github.sha }}.zip . -x ".git/*"
+        shell: bash
         
       - name: Clean old files from S3
         run: |
