--- a/package.json
+++ b/package.json
@@ -6,10 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "postbuild": "next-sitemap",
-    "prestart": "npm run build",
     "start": "next start",
-    "lint": "next lint",
-    "deploy": "pm2 start ecosystem.config.js --env production"
+    "lint": "next lint"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
