--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,11 +51,14 @@ jobs:
 
       - name: Make zip file
         run: |
-          mkdir -p build/.next/static
-          mkdir -p build/public
-          cp -r .next/standalone/* build/
-          cp -r .next/static/* build/.next/static
-          cp -r public/* build/public
+          mkdir -p build/standalone/.next/static
+          mkdir -p build/standalone/public
+          mkdir -p build/standalone/scripts
+          cp -r .next/standalone/* build/standalone/
+          cp -r .next/static/* build/standalone/.next/static/
+          cp -r public/* build/standalone/public/
+          cp -r scripts/* build/standalone/scripts/
+          cp appspec.yml build/standalone
           cd build
           zip -qq -r ../nextjs-app-${{ github.sha }}.zip .
         shell: bash
