--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,9 +55,10 @@ jobs:
           mkdir -p build/standalone/public
           mkdir -p build/standalone/scripts
 
-          rsync -a --copy-links .next/standalone/ build/standalone/
-          rsync -a --copy-links .next/static/ build/standalone/.next/static/
-          rsync -a --copy-links public/ build/standalone/public/
+          tar -czf - .next/standalone | tar -xzf - -C build/standalone/
+          tar -czf - .next/static | tar -xzf - -C build/standalone/.next/static/
+          tar -czf - public | tar -xzf - -C build/standalone/public/
+  
           cp scripts/* build/standalone/scripts/
           cp appspec.yml build/standalone
           cp .env build/standalone/
